Fix chevron on smallest viewport size

--- a/src/sass/global-nav.scss
+++ b/src/sass/global-nav.scss
@@ -324,7 +324,7 @@ $global-nav-link-color: #3097ff;
 // sass-lint:disable no-ids
 #all-canonical-mobile {
   .global-nav__header-link-anchor::after {
-    right: map-get($grid-margin-widths, default);
+    right: map-get($grid-margin-widths, small);
   }
 }
 
